# raft-toolkit

./: .bandit  .dockerignore  .env.example  .env.test.example  .flake8  .gitignore  .safety-policy.yml  .trivyignore  CHANGELOG.md  CLAUDE.md  COMBINED_RELEASES.md  Dockerfile  Dockerfile.windows  PROJECT_STRUCTURE.md  PYTHON_311_SETUP.md  README.md  SECURITY.md  answer.py  bandit-report.json  checkpointing.py  cli  client_utils.py  core  debug_ci.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  env_config.py  eval.py  file_utils.py  format.py  identity_utils.py  logconf.py  pfeval_chat.py  pfeval_completion.py  pfeval_local.py  pyproject.toml  pytest.ini  raft.py  raft_toolkit-0.2.0-py3-none-any.whl  (+18 more)
.github/: dependabot.yml
.github/instructions/: INSTRUCTIONS.md
.github/workflows/: build.yml  ci.yml  deploy.yml  kubernetes.yml  release-cli.yml  release-combined.yml  release-web.yml  release.yml  security.yml  test.yml  wiki-publish.yml
cli/: main.py
core/: config.py  models.py  raft_engine.py  security.py
core/clients/: __init__.py  openai_client.py  stats.py
core/formatters/: __init__.py  dataset_converter.py
core/logging/: __init__.py  logging.yaml  setup.py
core/services/: dataset_service.py  document_service.py  embedding_service.py  input_service.py  langwatch_service.py  llm_service.py
core/sources/: __init__.py  base.py  factory.py  local.py  s3.py  sharepoint.py
core/utils/: __init__.py  env_config.py  file_utils.py  identity_utils.py  rate_limiter.py  template_loader.py
deploy/: README.md
deploy/docker-compose/: .env.example  docker-compose.yml  nginx.conf
deploy/kubernetes/: cli-deployment.yaml  kustomization.yaml  namespace.yaml  redis-deployment.yaml  web-deployment.yaml  web-service.yaml
docs/: ALL_TESTS_FIX.md  API_TESTS_FIX.md  ARCHITECTURE.md  BUILD_OPTIMIZATION.md  CI_OPTIMIZATION.md  CLI-Quick-Reference.md  CLI-Reference.md  CONFIGURATION.md  DEPENDENCY_TROUBLESHOOTING.md  DEPLOYMENT.md  FLAKE8_FIX.md  INPUT_SOURCES.md  INSTALLATION_GUIDE.md  KUBERNETES.md  NOMIC_EMBEDDINGS.md  PROJECT_STRUCTURE.md  PYTHON_311_SETUP.md  QUALITY_TRANSITION.md  RELEASES.md  REQUIREMENTS.md  TESTING.md  TESTING_FIXES.md  TEST_COVERAGE_IMPROVEMENTS.md  TEST_COVERAGE_SUMMARY.md  TEST_DIRECTORIES.md  TEST_FIXES_SUMMARY.md  TOOLS.md  WEB_INTERFACE.md
k8s/: README.md
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  job.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
k8s/helm/: Chart.yaml  values.yaml
k8s/helm/templates/: _helpers.tpl  deployment.yaml
k8s/overlays/aks/: azure-identity.yaml  deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml  pvc-patch.yaml  service-patch.yaml
k8s/overlays/eks/: aws-iam-service-account.yaml  aws-load-balancer-controller.yaml  deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml  pvc-patch.yaml  service-patch.yaml
k8s/overlays/gks/: deployment-patch.yaml  gcp-service-account.yaml  gcp-storage-classes.yaml  ingress-patch.yaml  kustomization.yaml  pvc-patch.yaml  service-patch.yaml
k8s/scripts/: deploy-aks.sh  deploy-eks.sh  deploy-gks.sh
notebooks/: evaluation.ipynb  generation.ipynb  step 1: qa-generation.ipynb  step 2: qa-evaluation.ipynb
raft_toolkit/cli/: main.py
raft_toolkit/core/: models.py  raft_engine.py  security.py
raft_toolkit/core/formatters/: dataset_converter.py
raft_toolkit/core/services/: dataset_service.py  document_service.py  llm_service.py
raft_toolkit/core/sources/: local.py  s3.py
raft_toolkit/core/utils/: template_loader.py
raft_toolkit/templates/: README.md
raft_toolkit/tools/: README.md  answer.py  eval.py  pfeval_chat.py  pfeval_completion.py  pfeval_local.py
raft_toolkit/web/: app.py
scripts/: check_dependencies.py  corrected-github-action.sh  create_combined_release.sh  create_release.sh  dockerfile_lint.py  fix-test-results.sh  generate_docs.py  github-actions-test-step.yml  split_files.sh  test-results-summary.sh  test_docker.py
templates/: gpt_qa_template.txt  gpt_template.txt  llama_qa_template.txt  llama_template.txt
test-results/: junit.xml
tests/: __init__.py  conftest.py  test_input_sources.py
tests/api/: __init__.py  test_web_app.py
tests/cli/: __init__.py  test_cli_main.py  test_eval_tool.py
tests/docker/: __init__.py  test_docker_environment.py
tests/fixtures/: test_api.json  test_data.txt
tests/integration/: __init__.py  test_document_service.py  test_end_to_end.py  test_llm_service.py  test_raft_engine.py
tests/unit/: __init__.py  test_basic_functionality.py  test_cli.py  test_clients.py  test_config.py  test_dataset_service.py  test_document_service.py  test_error_handling.py  test_formatters.py  test_input_service.py  test_models.py  test_nomic_embeddings.py  test_raft_engine.py  test_rate_limiter.py  test_security.py  test_services.py  test_sources.py  test_template_loader.py  test_utils.py
tools/: __init__.py  answer.py  eval.py  pfeval_chat.py  pfeval_completion.py  pfeval_local.py
ui/: Home.py
ui/pages/: Evaluation.py  Training.py  Validation.py
web/: app.py
