[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raft-toolkit"
version = "1.0.0"
description = "RAFT (Retrieval Augmented Fine Tuning) toolkit for generating synthetic Q&A datasets"
readme = "README.md"
license = "MIT"
authors = [
    {name = "RAFT Toolkit Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv",
    "pydantic>=2.0.0",
    "pathlib",
    "tqdm",
    "pandas",
    "pyarrow",
    "tiktoken",
    "pdfplumber",
    "python-pptx",
    "langchain-text-splitters",
    "sentence-transformers",
    "langchain-openai",
    "scikit-learn",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.25.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "redis>=5.0.1,<6.0.0",
    "celery>=5.3.4,<6.0.0",
]
kubernetes = [
    "kubernetes>=29.0.0,<30.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "azure-identity>=1.15.0,<2.0.0",
    "azure-mgmt-containerservice>=30.0.0,<31.0.0",
    "boto3>=1.34.0,<2.0.0",
    "google-cloud-container>=2.40.0,<3.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
]
cloud = [
    "boto3>=1.34.0,<2.0.0",
    "botocore>=1.34.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "requests-oauthlib>=1.3.0,<2.0.0",
    "msal>=1.24.0,<2.0.0",
]
tracing = [
    "opentelemetry-api>=1.22.0,<2.0.0",
    "opentelemetry-sdk>=1.22.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.22.0,<2.0.0",
    "opentelemetry-instrumentation>=0.40b0,<1.0.0",
    "structlog>=23.2.0,<24.0.0",
    "sentry-sdk>=1.40.0,<2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "yamllint>=1.33.0",
]
all = [
    "raft-toolkit[web,kubernetes,cloud,tracing,dev]",
]

[project.scripts]
raft = "cli.main:main"
raft-web = "web.app:main"

[project.urls]
"Homepage" = "https://github.com/microsoft/raft-toolkit"
"Bug Reports" = "https://github.com/microsoft/raft-toolkit/issues"
"Source" = "https://github.com/microsoft/raft-toolkit"

[tool.setuptools.packages.find]
include = ["core*", "cli*", "web*", "tools*"]
exclude = ["tests*", "notebooks*", "templates*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.yaml", "*.yml"]
templates = ["*.txt"]
web = ["static/*"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = [
    ".venv/*",
    "__pycache__/*",
    "*.egg-info/*",
    "build/*",
    "dist/*"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# Exclude problematic directories
exclude = [
    "\\.venv",
    "__pycache__",
    "\\.git",
    "build",
    "dist",
    "\\.eggs",
    "\\.egg-info"
]